data/derived/comb/progs/unify/prog0989.ml.out
Characters 63-74:
  wwhile (if f b = b then (f b, false) else (f b, true),b);;
                                            ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool -> bool * bool
